# pokeapi

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.tests  docker-compose.yml
src/: cache.py  chart.py  config.py  dependencies.py  main.py  models.py  router.py  upstream_api.py
terraform/: .terraform.lock.hcl  network.tf  provider.tf  server.tf  user_data.sh  variables.tf
tests/: README.md  conftest.py  test_cache.py  test_histogram.py  test_models.py  test_retrieval.py  test_upstream_api_module.py  tests.py
